--- a/examples/dynamicAttributes.html
+++ b/examples/dynamicAttributes.html
@@ -147,7 +147,7 @@
         	});
 
         	emitter = new ShaderParticleEmitter({
-                type: 'sphere',
+                type: 'cube',
         		particlesPerSecond: 5000
         	});
 
