Pre-build. Added changes from DelvarWorld re.JSHint.

--- a/examples/static.html
+++ b/examples/static.html
@@ -72,7 +72,7 @@
             		particlesPerSecond: 400,
 
                     opacityStart: 1,
-                    static: 1
+                    isStatic: 1
             	});
 
             	particleGroup.addEmitter( emitter );
